style.css
/* ... */
.lp-blocks-inside {
	padding: 3em 0;
}

.lp-block {
	position: relative;
	display: block;
	float: left;
	overflow: hidden;
	background: transparent;
	margin-right: 8%;
	margin-top: 2%;
	margin-bottom: 2%;
}

.lp-blocks.lp-blocks-rows-4 .lp-block {
	width: 19%;
}

.lp-blocks.lp-blocks-rows-3 .lp-block {
	width: 28%;
}

.lp-blocks.lp-blocks-rows-2 .lp-block {
	width: 46%;
}

.lp-blocks.lp-blocks-rows-1 .lp-block {
	width: 100%;
	margin-right: 0;
}

.lp-blocks.lp-blocks-rows-4 .lp-block:nth-child(4n),
.lp-blocks.lp-blocks-rows-3 .lp-block:nth-child(3n),
.lp-blocks.lp-blocks-rows-2 .lp-block:nth-child(2n) {
	margin-right: 0;
}

.lp-block i {
	display: inline-block;
	margin-bottom: .5em;
	cursor: default;
}

.lp-block a i {
	cursor: pointer;
}

.lp-block i::before {
	margin-left: 100px;
	opacity: 0;
	font-size: 35px; /* em units cause blur */
	line-height: 1;
}

.lp-block i::before,
.lp-block .lp-block-title,
.lp-block .lp-block-text {
	opacity: 0;
	margin-left: 50px;
	position: relative;
	top: 0;
	-webkit-transition: all .3s ease-out;
	transition: all .3s ease-out;
	-webkit-animation: 1s .5s icon-slide forwards;
	animation: 1s .5s icon-slide forwards;
}

.lp-block .lp-block-title {
	font-weight: bold;
}

.lp-block:hover i::before {
	top: 3px;
}

.lp-block:hover .lp-block-title {
	top: -3px;
}

.lp-block:nth-child(2) i::before {
	-webkit-animation-delay: .65s;
	animation-delay: .65s;
}

.lp-block:nth-child(3) i::before {
	-webkit-animation-delay: .8s;
	animation-delay: .8s;
}

.lp-block:nth-child(4) i::before {
	-webkit-animation-delay: .95s;
	animation-delay: .95s;
}

.lp-block:nth-child(1) .lp-block-title {
	-webkit-animation-delay: .65s;
	animation-delay: .65s;
}

.lp-block:nth-child(2) .lp-block-title {
	-webkit-animation-delay: .8s;
	animation-delay: .8s;
}

.lp-block:nth-child(3) .lp-block-title {
	-webkit-animation-delay: .95s;
	animation-delay: .95s;
}

.lp-block:nth-child(4) .lp-block-title {
	-webkit-animation-delay: 1.1s;
	animation-delay: 1.1s;
}

.lp-block:nth-child(1) .lp-block-text {
	-webkit-animation-delay: .8s;
	animation-delay: .8s;
}

.lp-block:nth-child(2) .lp-block-text {
	-webkit-animation-delay: .95s;
	animation-delay: .95s;
}

.lp-block:nth-child(3) .lp-block-text {
	-webkit-animation-delay: 1.1s;
	animation-delay: 1.1s;
}

.lp-block:nth-child(4) .lp-block-text {
	-webkit-animation-delay: 1.25s;
	animation-delay: 1.25s;
}

@-webkit-keyframes icon-slide {
	from {
		margin-left: 50px;
		opacity: 0;
	}
	to {
		margin-left: 0;
		opacity: 1;
	}
}

@keyframes icon-slide {
	from {
		margin-left: 50px;
		opacity: 0;
	}
	to {
		margin-left: 0;
		opacity: 1;
	}
}

.main .lp-block-title {
	margin: 0 auto .75em;
	letter-spacing: 1px;
	line-height: 1.5;
	text-transform: uppercase;
}

.lp-block-text {
	line-height: 1.5;
	width: 100%;
}

.lp-block-readmore {
	display: inline-block;
	margin-top: 1.5em;
	font-size: 0.85em;
	font-weight: bold;
	text-transform: uppercase;
	-webkit-transition: .2s ease-out color;
	transition: .2s ease-out color;
}

/* LP Blocks 2 */
.lp-blocks2 .lp-section-header + .lp-blocks-inside {
	padding-top: 2em;
	padding-bottom: 5em;
}

.lp-blocks2 .lp-block {
	margin-right: 4%;
}


.lp-blocks2.lp-blocks-rows-4 .lp-block {
	width: 22%;
}

.lp-blocks2.lp-blocks-rows-3 .lp-block {
	width: 30.666%;
}

.lp-blocks2.lp-blocks-rows-2 .lp-block {
	width: 48%;
}

.lp-blocks2 .lp-blocks-inside {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
}

.lp-blocks2 .lp-block {
	padding: 2.5em;
	background: #FFF;
}

.lp-blocks2 .lp-block i::before {
	font-size: 30px;
}

.lp-blocks2 .lp-block-title {
	margin-top: 0.5em;
	margin-bottom: 1em;
	font-size: 0.9em;
	letter-spacing: 0.2px;
}

.lp-blocks2  .lp-block:hover i::before {
	top: 0;
}

.lp-blocks2 .lp-block:hover .lp-block-title {
	top: 0;
}


/* LP Boxes */
.lp-boxes {
	display: block;
	float: none;
	width: 100%;
	overflow: hidden;
}

.lp-boxes .lp-boxes-inside,
.lp-boxes .lp-boxes-margins {
	padding-top: 3em;
	padding-bottom: 3em;
	padding-left: 20rem;
	padding-right: 20rem;
}

.lp-box {
	display: block;
	float: left;
	overflow: hidden;
	position: relative;
}

.lp-boxes.lp-boxes-rows-4 .lp-box {
	width: 25%;
}

.lp-boxes.lp-boxes-rows-3 .lp-box {
	width: 33.32%;
}

.lp-boxes.lp-boxes-rows-2 .lp-box {
	width: 50%;
}

.lp-boxes.lp-boxes-rows-1 .lp-box {
	width: 100%;
}

.lp-boxes.lp-boxes-rows-4 .lp-boxes-margins .lp-box {
	width: 22%;
	margin-right: 4%;
	margin-top: 2%;
	margin-bottom: 2%;
}

.lp-boxes.lp-boxes-rows-3 .lp-boxes-margins .lp-box {
	width: 30.6666%;
	margin-right: 4%;
	margin-top: 2%;
	margin-bottom: 2%;
}

.lp-boxes.lp-boxes-rows-2 .lp-boxes-margins .lp-box {
	width: 48%;
	margin-right: 4%;
	margin-top: 2%;
	margin-bottom: 2%;
}

.lp-boxes.lp-boxes-rows-1 .lp-boxes-margins .lp-box {
	margin-top: 1em;
	margin-bottom: 1em;
}

.lp-boxes.lp-boxes-rows-4 .lp-box:nth-child(4n),
.lp-boxes.lp-boxes-rows-3 .lp-box:nth-child(3n),
.lp-boxes.lp-boxes-rows-2 .lp-box:nth-child(2n) {
	margin-right: 0;
}

.lp-boxes.lp-boxes-rows-4 .lp-box:nth-child(4n+1),
.lp-boxes.lp-boxes-rows-3 .lp-box:nth-child(3n+1),
.lp-boxes.lp-boxes-rows-2 .lp-box:nth-child(2n+1) {
	clear: both;
}

.lp-box-image {
	position: relative;
	overflow: hidden;
}

.lp-box .lp-box-image > img {
	position: relative;
	z-index: 10;
	display: block;
	width: 100%;
	height: 100%;
}

.lp-box-image::before {
	/* content: "\e90f"; */
	position: absolute;
	z-index: 2;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	width: 100px;
	height: 100px;
	margin: auto;
	font-family: 'iconmeta';
	font-size: 100px;
	line-height: 1;
	color: rgba(0, 0, 0, .05);
}

.lp-box-title {
	position: relative;
	display: inline-block;
	font-weight: bold;
	font-size: 1.2em;
	line-height: 1.5;
}

.lp-box-title a,
.lp-box-title a:hover {
	color: inherit;
	font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
}

.lp-box-text-inside {
	margin: .75em 0;
}
/* ... */

